--- a/templates/admin_panel/category_form.html
+++ b/templates/admin_panel/category_form.html
@@ -9,14 +9,14 @@
     <label for="editCategoryBanner" class="form-label">Banner Image</label>
     <input type="file" class="form-control" id="editCategoryBanner" name="banner">
     {% if category.banner %}
-      <img src="{{ category.banner.url }}" loading="lazy" decoding="async" alt="Current Banner" height="60" class="mt-2">
+      <img src="{{ category.banner.url }}" alt="Current Banner" height="60" class="mt-2">
     {% endif %}
   </div>
   <div class="mb-3">
     <label for="editCategoryGif" class="form-label">GIF/Image</label>
     <input type="file" class="form-control" id="editCategoryGif" name="gif_file">
     {% if category.gif_file %}
-      <img src="{{ category.gif_file.url }}" loading="lazy" decoding="async" alt="Current GIF" height="60" class="mt-2">
+      <img src="{{ category.gif_file.url }}" alt="Current GIF" height="60" class="mt-2">
     {% endif %}
   </div>
   <div class="modal-footer">
